Initially overflow:hidden added to body to fix overflow issues. This caused a problem where I could not scroll down, so instead this property was added to the container class and now it fixes overflow on width on all screen sizes

--- a/style.css
+++ b/style.css
@@ -1,14 +1,19 @@
 body{
-   background: #d9a7c7;  /* fallback for old browsers */
+  /* background: #d9a7c7;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #fffcdc, #d9a7c7);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #fffcdc, #d9a7c7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-overflow:hidden;
-
+background: linear-gradient(to right, #fffcdc, #d9a7c7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ 
 }
 
 .row{
     max-width:100%;
+    overflow:hidden;
     
+}
+
+/* overflow on main game page fixed by setting it to hidden for the bootstrap container*/
+.container{
+    overflow:hidden;
+    max-width:100%;
 }
 
 
@@ -18,36 +23,25 @@ overflow:hidden;
 .title{
     text-align:center;
     font-family: 'Lora', serif;
+    overflow:hidden;
 
 }
 
 
 .moves-made{
     text-align:center;
+    overflow:hidden;
 }
 .level-choice{
     margin-top:5vh;
     text-align:center;
+    overflow:hidden;
 }
 
 .navigation-buttons{
     text-align:center;
 }
-.gameboard {
 
-
-    margin-top:5vh;
-    /*border-radius: 0.3em;*/
-    /*box-shadow: 0 5px 5px #808080;*/
-    background: url(background-waterfall.png) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    width:100vw;
-    padding:0;
-
-}
 
 .game-board{
       background: url(paws.jpg) no-repeat center center fixed;
@@ -56,17 +50,16 @@ overflow:hidden;
     -o-background-size: cover;
     background-size: cover;
     padding-bottom:20px;
-    overflow:hidden;
+
         max-width:100%;
+        justify-content:center;
+        overflow:hidden;
 
 
 
 }
 
-.game-grid-row {
-    display: flex;
-    flex-wrap: nowrap;
-}
+
 
 
 
@@ -80,7 +73,7 @@ overflow:hidden;
 
 
 .game-card {
-    overflow: none;
+    overflow: hidden;
     padding: 0;
     border: black;
     border-radius: .28571429rem;
